k8s/api-customers-deplolyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-customers-deployment
spec:
  replica: 1
  selector:
    matchLabels:
      component: api-customers
  template:
    metadata:
      labels:
        component: api-customers
    spec:
      volumes:
        - name: db-storage
          persistentVolimeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: api-customers
          image: mark600/mobicolab_portal_api_customers
          ports:
            - containerPort: 3030
        - name: db-customers
          image: posgres
          volumeMounts:
            - name: db-storage
              mountPaht: /var/lib/postgresql/data
              subPaht: postgres
          ports:
            - containerPort: 5432
