k8s/api-files-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-files-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api-files
  template:
    metadata:
      labels:
        component: api-files
    spec:
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: api-files
          image: mark600/mobicolab_portal_api_files
          ports:
            - containerPort: 3010
        - name: db-files
          image: postgres
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgres/data
              subPath: postgres
          ports:
            - containerPort: 5432
