k8s/api-general-customers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-general-customers-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      compnent: api-general-customers
  template:
    metadata:
      labels:
        compnent: api-general-customers
    spec:
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: api-general-customers
          image: mark600/mobicolab_portal_api_general_customers
          ports:
            - containerPort: 3040
        - name: db-general-customers
          image: postgres
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          ports:
            - containerPort: 5432
