k8s/api-labs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-labs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api-labs
  template: 
    metadata:
      labels:
        component: api-labs
    spec:
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: api-labs
          image: mark600/mobicolab_portal_api_labs
          ports:
            - containerPort: 3050
        - name: db-labs
          image: postgres
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          ports:
            - containerPort: 5432
