k8s/api-subscriptions-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-subscriptions-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api-subscriptions
  template:
    metadata:
      labels:
        component: api-subscriptions
    spec:
      volumes:
        # - name: db-storage
        #   persistentVolumeClaim:
        #     claimName: database-persistent-volume-claim
      containers:
        - name: api-subscriptions
          image: mark600/mobicolab_portal_api_subscriptions
          ports:
            - containerPort: 3060
        # - name: db-subscriptions
        #   image: postgres
        #   envFrom:
        #     - configMapRef:
        #         name: postgres-config-general
        #   volumeMounts:
        #     - name: db-storage
        #       mountPath: /var/lib/postgresql/data
        #       subPath: postgres
        #   ports:
        #     - containerPort: 5432
