k8s/api-bridge-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-bridge-clustre-ip-service
spec:
  clusterIP: None
  selector:
    component: api-bridge
  ports:
    - name: grpc
      port: 2010
