k8s/api-customers-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cusomers-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: api-customers
  ports:
    - port: 3030
      name: api
      targetPort: 3030
    - port: 6030
      name: db
      targetPort: 6030
