k8s/api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
  labels:
    app: api-gateway
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 2000
      targetPort: 2000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      serviceAccountName: api-gateway
      containers:
        - name: api-gateway
          image: mark600/mobicolab_portal_api_gateway
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2000
          resources:
            requests:
              memory: "250Mi"
            limits:
              memory: "500Mi"
