k8s/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  labels:
    app: web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: tcp
      port: 4200
      targetPort: 4200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      serviceAccountName: web
      containers:
        - name: web
          image: mark600/mobicolab_portal_client
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4200
          resources:
            requests:
              memory: "1000Mi"
            limits:
              memory: "1500Mi"
